#12_backend_recommendation: Auto stash before merge of "feat/#12_backend_recommendation" and "origin/fix/#61_backend_fix_response_status"
